Add link to the add new mood form

--- a/views/moods/index.ejs
+++ b/views/moods/index.ejs
@@ -8,6 +8,8 @@
 <body>
     <%- include('../partials/_navbar.ejs') %>
     <h1>My Moods</h1>
-    <h2>Moods</h2>
+    <h2>
+        <a href="/users/<%= user._id %>/moods/new">Add A Mood</a>
+    </h2>
 </body>
 </html>
