Add instruction in option for progress to prompt user to pick status

--- a/views/moods/new.ejs
+++ b/views/moods/new.ejs
@@ -40,6 +40,7 @@
 
         <label for="progress">Progress: </label>
         <select name="progress" id="progress required">
+            <option value="Choose an Action Status" disabled selected>Choose an Action Status</option>
             <option value="No Action Needed">No Action Needed</option>
             <option value="Not Started">Not Started</option>
             <option value="In Progress">In Progress</option>
