Add unique moods onto moods index page

--- a/views/moods/index.ejs
+++ b/views/moods/index.ejs
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Moods</title>
 </head>
+
 <body>
     <%- include('../partials/_navbar.ejs') %>
-    <h1>My Moods</h1>
-    <h2>
-        <a href="/users/<%= user._id %>/moods/new">Add A Mood</a>
-    </h2>
+        <h1>My Moods</h1>
+        <h2>
+            <a href="/users/<%= user._id %>/moods/new">Add A Mood</a>
+        </h2>
+        <ul>
+            <% uniqueMoods.forEach(mood=> { %>
+                <li>
+                    <a href="/users/<%= user._id %>/moods/<%= mood %>">
+                        <%= mood %>
+                    </a>
+                </li>
+                <% }) %>
+        </ul>
 </body>
+
 </html>
