--- a/views/moods/new.ejs
+++ b/views/moods/new.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Add a Mood</h1>
-    <form action="/users/<%= user._id %>/moods method="post">
+    <form action="/users/<%= user._id %>/moods" method="post">
         <label for="mood">Type of Mood: </label>
         <input type="text" name="mood"  id="mood" required />
 
