Fix typo for nextSteps in label and text area for element ids

--- a/views/moods/new.ejs
+++ b/views/moods/new.ejs
@@ -32,8 +32,8 @@
             <option value="10">10</option>
         </select>
 
-        <label for="next-steps">Next Steps: </label>
-        <textarea name="next-steps" id="next-steps"></textarea>
+        <label for="nextSteps">Next Steps: </label>
+        <textarea name="nextSteps" id="nextStep"></textarea>
 
         <label for="takeaway">Takeaway: </label>
         <textarea name="takeaway" id="takeaway"></textarea>
