--- a/views/moods/edit.ejs
+++ b/views/moods/edit.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Edit My Mood</title>
 </head>
 
@@ -50,6 +51,7 @@
                 <option value="In Progress"  <%= log.progress === "In Progress" ? "selected" : "" %>>In Progress</option>
                 <option value="Completed"  <%= log.progress === "Completed" ? "selected" : "" %>>Completed</option>
             </select>
+            <button type="submit">Update</button>
         </form>
 </body>
 
