--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/home.css" />
   <title>Home Page</title>
 </head>
+
 <body>
-  <%- include('./partials/_navbar.ejs') %>
-  <p><a href="/vip-lounge">Get into the VIP Users Only lounge!</a></p>
+  <div class="container">
+    <%- include('./partials/_navbar.ejs') %>
+      <div class="index-container">
+        <div class="text-container">
+          <h1 class="main-header">Moody</h1>
+          <p class="subheader">A safe space to reflect, express, and navigate your emotions with ease.</p>
+        </div>
+        <% if (!user) { %>
+          <div class="auth-links">
+            <a class="signup-link" href="/auth/sign-up">Sign Up</a>
+            <a class="signin-link" href="/auth/sign-in">Sign In</a>
+          </div>
+          <% } %>
+      </div>
 </body>
+
 </html>
