Link stylesheet, modify welcome message, add class to buttons for styling

--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
   <title>Sign Up</title>
 </head>
 <body>
-  <h1>Create a new account!</h1>
+  <h1>Create an account to begin.</h1>
   <form action="/auth/sign-up" method="POST">
     <label for="username">Username:</label>
     <input type="text" name="username" id="username" required />
@@ -19,7 +20,7 @@
       id="confirmPassword"
       required 
     />
-    <button type="submit">Sign up</button>
+    <button class="signup-button" type="submit">Sign up</button>
   </form>
 </body>
 </html>
