--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -18,7 +18,7 @@ body {
     text-align: center;
     background: linear-gradient(135deg, #8af0bd, #353d88);
     /* Gradient background */
-    color: white;
+    color: rgba(255, 255, 255, 0.754);
     padding: 20px;
 }
 
@@ -74,7 +74,7 @@ body {
 .back-link {
     display: inline-block;
     padding: 10px 16px;
-    background-color: #AEC6CF;
+    background-color: #7db2c5;
     color: #fff;
     text-decoration: none;
     border-radius: 8px;
@@ -83,7 +83,7 @@ body {
 }
 
 .back-link:hover {
-    background-color: #8FAACF;
+    background-color: rgb(112, 134, 164);
     /* Slightly darker shade */
 }
 
