--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,21 +3,21 @@
 input:invalid,
 textarea:invalid,
 select:invalid {
-    border: 1px solid rgb(255, 138, 138);
+    border: 1px solid rgb(247, 101, 101);
 }
 
 body {
     font-family: 'Cormorant Infant', sans-serif;
     display: flex;
     flex-direction: column;
-    min-height: 100vh; 
+    min-height: 100vh;
     width: 100vw;
     background: linear-gradient(135deg, #f8f9fa, #23658f);
     background-attachment: fixed;
     align-items: center;
     text-align: center;
     padding: 20px;
-    margin: 0; 
+    margin: 0;
     box-sizing: border-box;
 }
 
@@ -27,31 +27,37 @@ h1 {
     font-size: 32px;
     font-weight: 700;
     margin-top: 150px;
-    color: #4a5568;
+    color: #46679f;
 }
 
+h2 {
+    font-size: 32px;
+    color: #586c94;
+}
 
 h2 a {
     display: inline-block;
-    background: #74c69d;
-    color: white;
+    background: #6e99c9;
+    color: rgb(255, 255, 255);
     padding: 10px 20px;
     border-radius: 8px;
     font-size: 18px;
     font-weight: 600;
     text-decoration: none;
-    transition: background 0.3s ease-in-out;
+    transition: background 0.5s ease-in-out;
 }
 
 h2 a:hover {
-    background: #52b788;
+    background: #9fc5f6;
+    box-shadow: 1px 1px 35px rgb(185, 233, 244);
+    transform: scale(1.10);
+    text-shadow: 0 0 30px rgb(185, 224, 239), 0 0 30px rgb(185, 224, 239), 10px 10px 30px rgb(185, 224, 239);
 }
 
 ul {
     list-style: none;
     padding: 0;
-    margin-top: 20px;
-    display: block; 
+    display: block;
 }
 
 ul li {
@@ -59,8 +65,8 @@ ul li {
     padding: 12px 30px;
     border-radius: 10px;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
-    margin: 10px 5px; 
-    max-width: 300px;
+    margin-bottom: 20px;
+    min-width: 200px;
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
@@ -74,6 +80,7 @@ ul li a {
 
 ul li:hover {
     transform: translateY(-3px);
+    background-color: rgba(217, 236, 248, 0.505);
     box-shadow: 4px 6px 15px rgba(0, 0, 0, 0.15);
 }
 
@@ -83,13 +90,18 @@ form {
     flex-direction: column;
     margin: 20px auto;
     padding: 20px;
-    background: #f9f9f9;
+    background: rgba(242, 243, 255, 0.505);
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(255, 250, 250, 0.311);
     align-items: center;
     text-align: center;
 }
 
+input,
+textarea,
+select {
+    background-color: rgba(238, 236, 236, 0.98)
+}
 
 select {
     text-align: center;
@@ -161,7 +173,7 @@ table {
 
 /* Table Header */
 th {
-    background: rgba(119, 122, 208, 0.505);
+    background: rgba(104, 129, 204, 0.505);
     color: white;
     padding: 12px;
     text-align: center;
@@ -182,10 +194,8 @@ td form {
 }
 
 
-
-
 tr:hover {
-    background: #f1f1f1;
+    background: #b0d0e2d4;
 }
 
 /* Buttons */
@@ -198,11 +208,14 @@ button {
     border-radius: 4px;
     cursor: pointer;
     font-size: 14px;
-    width:100%;
+    width: 100%;
 }
 
 
-.update-button, .submit-button, .signup-button, .signin-button {
+.update-button,
+.submit-button,
+.signup-button,
+.signin-button {
     padding: 10px;
     margin-top: 15px;
     width: 100%;
@@ -211,7 +224,7 @@ button {
 }
 
 .table-button {
-    /* padding: 6px 12px;  */
+    background-color: #d4e7ff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -220,7 +233,7 @@ button {
 }
 
 .table-button:hover {
-    background-color: #7cbbe3; 
+    background-color: #87bfe2;
     transition: background 0.3s ease-in-out;
 }
 
@@ -239,12 +252,11 @@ button:hover {
     border-radius: 8px;
     font-weight: bold;
     transition: background 0.3s ease-in-out;
-  }
-  
-  .back-link:hover {
+}
+
+.back-link:hover {
     background-color: #8FAACF;
-  }
-  
+}
 
 
 @media (max-width: 768px) {
