--- a/views/moods/new.ejs
+++ b/views/moods/new.ejs
@@ -14,7 +14,7 @@
         <label for="mood">Type of Mood: </label>
         <input type="text" name="mood" id="mood" value="<%= mood %>" required />
 
-        <label for="description">description: </label>
+        <label for="description">Description: </label>
         <textarea name="description" id="description" required></textarea>
 
         <label for="date">Date: </label>
